feat(textreader): Added a text editor/reader with ckeditor

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Windows</title>
+  <title>XServer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- include libraries(jQuery, bootstrap) -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
+          type="text/javascript"></script>
+
+  <!-- include summernote css/js-->
+  <link href="./assets/summernote/dist/summernote.css" rel="stylesheet">
+  <script src="./assets/summernote/dist/summernote.js"></script>
 </head>
 <body>
   <app-root></app-root>
